# EZ-EMFI

./: .gitmodules  ARCHITECTURE_COMPARISON_ANALYSIS.md  CLAUDE.md  CREATE_PR_HERE.txt  FORGE_ARCHITECTURE_ANALYSIS.md  START_HERE.md  monorepo-refactor-pickup-here.md  pyproject.toml  run_bad_tests.sh
.claude/commands/: models.md
docs/: BasicAppDataTypes-Mapping.md  MONO_REPO_ITERATION_PROMPT.md  Q1_FSM_OBSERVER_PLACEMENT.md  SESSION_SUMMARY.md  SPIKE_EVALUATION_AND_PATH_FORWARD.md
docs/BasicAppDataTypes/: BAD_MASTER_Orchestrator.md  BAD_Phase1_COMPLETE.md  BAD_Phase1_Implementation_Plan.md  BAD_Phase1_Module_Structure.md  BAD_Phase1_TypeSystem.md  BAD_Phase2_COMPLETE.md  BAD_Phase2_RegisterMapping.md  BAD_Phase3_COMPLETE.md  BAD_Phase3_RegPackage.md  BAD_Phase3_RegPackage_r1.md  BAD_Phase3_RegPackage_r2.md  BAD_Phase4_COMPLETE.md  BAD_Phase4_CodeGeneration.md  BAD_Phase5_COMPLETE.md  BAD_Phase5_Testing.md  BAD_Phase5_Testing_r2.md  BAD_Phase6_Documentation.md  HANDOFF_TO_FRESH_CONTEXT.md  Master_Orchestrator_Prompt.md  P3_START_prompt.md  P3_START_prompt_r2.md  P5_START_prompt.md  (+3 more)
examples/: DS1140_PD_deployment.py  DS1140_PD_interface.yaml
libs/basic-app-datatypes/: README.md  llms.txt  pyproject.toml
libs/basic-app-datatypes/basic_app_datatypes/: __init__.py
libs/basic-app-datatypes/tests/: test_basic_app_datatypes.py  test_mapper.py
python_tests/: README.md  test_bad_integration.py  test_bad_register_mapper.py  test_basic_app_datatypes.py  test_code_generation.py  test_reg_package.py
tools/: generate_custom_inst_v2.py  generate_type_utilities.py
(+4 files in other folders)
