[project]
name = "basic-app-datatypes"
version = "0.1.0"
description = "Type-safe data serialization for Moku FPGA applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "EZ-EMFI Team" }
]
keywords = ["moku", "fpga", "emfi", "type-system", "register-mapping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.hatch.build.targets.wheel]
packages = ["basic_app_datatypes"]
